Initial code commit

--- a/ru.html
+++ b/ru.html
@@ -105,7 +105,7 @@
                 <a href="#offers" class="menu-link" id="footerOffersLink">Услуги</a>
                 <a href="#contact-us" class="menu-link" id="footerContactsLink">Контакты</a>
             </nav>
-            <span class="copyright">
+            <span id='copyright' class="copyright">
                 Copyright 2019, Grivika - Kravas pārvadājumi
             </span>
         </div>
